<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="112dp"
    android:layout_height="96dp"
    android:layout_margin="4dp">

    <ImageView
        android:id="@+id/itemImage"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/itemName"
        tools:src="@drawable/ic_baseline_fastfood_24"
        android:contentDescription="@string/content_description_item_image" />

    <TextView
        android:id="@+id/itemName"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        app:layout_constraintTop_toBottomOf="@id/itemImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="13sp"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/black"
        tools:text="Cheeseburger Meal" />

    <CheckBox
        android:id="@+id/cbItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:checked="true" />

</androidx.constraintlayout.widget.ConstraintLayout>